force-app/main/default/objects/School_Object__c/School_Object__c.object-meta.xml
<CustomObject>
    <description>The &quot;School Object&quot; is a custom object in Salesforce that serves to store and manage specific data related to educational institutions associated with the company&apos;s operations. It may include fields such as School Name, School ID, Location, Contact Information, Associated Programs, Number of Students, and other relevant details. This object is used to track, report, and analyze interactions between the company and the schools, facilitating effective relationship management.</description>
    <label>School Object</label>
    <nameField>
        <label>School Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>School Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>