force-app/main/default/objects/School_Object__c/fields/Accepts_Online_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Accepts_Online_Payment_Status__c</fullName>
    <description>The status of whether the school accept online payment. The values are disabled, disabled_but_autopay, enabled</description>
    <inlineHelpText>The status of whether the school accept online payment. The values are disabled, disabled_but_autopay, enabled</inlineHelpText>
    <label>Accepts Online Payment Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>