force-app/main/default/objects/School_Object__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account related to the School Object.</description>
    <inlineHelpText>Account related to the School Object.</inlineHelpText>
    <label>Account_x</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>School Objects</relationshipLabel>
    <relationshipName>School_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>