force-app/main/default/objects/School_Object__c/fields/Actions_Per_Child_Threshold_Met__c.field-meta.xml
<CustomField>
    <fullName>Actions_Per_Child_Threshold_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actions Per Child Threshold Met_x</label>
    <type>Checkbox</type>
</CustomField>