force-app/main/default/objects/School_Object__c/fields/Actions_Per_Student__c.field-meta.xml
<CustomField>
    <fullName>Actions_Per_Student__c</fullName>
    <description>Based on activities 14 days prior to closed won and not populated/will be blank until student added threshold is met.</description>
    <inlineHelpText>Based on activities 14 days prior to closed won and not populated/will be blank until student added threshold is met.</inlineHelpText>
    <label>Activities Per Student</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>