force-app/main/default/objects/School_Object__c/fields/Active_Billing_Students_At_Activation__c.field-meta.xml
<CustomField>
    <fullName>Active_Billing_Students_At_Activation__c</fullName>
    <label>Active Billing Students At Activation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>