force-app/main/default/objects/School_Object__c/fields/Active_Student_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Student_Count__c</fullName>
    <label>Active Student Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>