force-app/main/default/objects/School_Object__c/fields/Active_Student_Enrollment_Percent__c.field-meta.xml
<CustomField>
    <fullName>Active_Student_Enrollment_Percent__c</fullName>
    <description>This shows the active students as a % of enrollment</description>
    <inlineHelpText>This shows the active students as a % of enrollment</inlineHelpText>
    <label>Active Student Enrollment Percent</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>