force-app/main/default/objects/School_Object__c/fields/Active_Students_1_Bill_Plans_Applied__c.field-meta.xml
<CustomField>
    <fullName>Active_Students_1_Bill_Plans_Applied__c</fullName>
    <label>Active Students 1+ Bill Plans Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>