force-app/main/default/objects/School_Object__c/fields/Active_Students_Parents_Activated__c.field-meta.xml
<CustomField>
    <fullName>Active_Students_Parents_Activated__c</fullName>
    <description>The number of currently active students that have at least one parent activated</description>
    <inlineHelpText>The number of currently active students that have at least one parent activated</inlineHelpText>
    <label># Active Students Parents Activated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>