force-app/main/default/objects/School_Object__c/fields/Active_Students_Parents_Added__c.field-meta.xml
<CustomField>
    <fullName>Active_Students_Parents_Added__c</fullName>
    <description>The number of currently active students that have at least one parent added</description>
    <inlineHelpText>The number of currently active students that have at least one parent added</inlineHelpText>
    <label># Active Students Parents Added</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>