force-app/main/default/objects/School_Object__c/fields/Active_Students_with_1_Guardian_Added__c.field-meta.xml
<CustomField>
    <fullName>Active_Students_with_1_Guardian_Added__c</fullName>
    <inlineHelpText>The percent of active students with an added parent</inlineHelpText>
    <label>Active Students with 1+ Guardian Added</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>