force-app/main/default/objects/School_Object__c/fields/Active_Students_with_Billing_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Active_Students_with_Billing_Ratio__c</fullName>
    <description>Indicates current % of active student on a billing plan</description>
    <inlineHelpText>Indicates current % of active student on a billing plan</inlineHelpText>
    <label>Active Students with Charges Set Up</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>