force-app/main/default/objects/School_Object__c/fields/Active_Students_with_One_Payment_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Active_Students_with_One_Payment_Ratio__c</fullName>
    <description>Indicates current % of active student on billing plan with one payment</description>
    <inlineHelpText>Indicates current % of active student on billing plan with one payment</inlineHelpText>
    <label>Active Students with Bill Paid Online</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>