force-app/main/default/objects/School_Object__c/fields/Active_Students_with_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Active_Students_with_Payment_Method__c</fullName>
    <label>Active Students with Payment Method</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>