force-app/main/default/objects/School_Object__c/fields/Active_Students_with_Two_Bills_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Active_Students_with_Two_Bills_Ratio__c</fullName>
    <description>Indicates current % of active students on billing plan with two bills sent</description>
    <inlineHelpText>Indicates current % of active students on billing plan with two bills sent</inlineHelpText>
    <label>Active Students with Two Bills Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>