force-app/main/default/objects/School_Object__c/fields/Active_Students_with_Two_Payments_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Active_Students_with_Two_Payments_Ratio__c</fullName>
    <description>Indicates current % of active student on billing plan with two payments</description>
    <inlineHelpText>Indicates current % of active student on billing plan with two payments</inlineHelpText>
    <label>Active Students with Two Payments Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>