force-app/main/default/objects/School_Object__c/fields/Activities_Messages_in_Last_7_Days__c.field-meta.xml
<CustomField>
    <fullName>Activities_Messages_in_Last_7_Days__c</fullName>
    <label>Activities &amp; Messages in Last 7 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>