force-app/main/default/objects/School_Object__c/fields/Activity_Count__c.field-meta.xml
<CustomField>
    <fullName>Activity_Count__c</fullName>
    <description>All activities all time (including product actions, msg, invoice, statements etc.)</description>
    <inlineHelpText>All activities all time (including product actions, msg, invoice, statements etc.)</inlineHelpText>
    <label>Activity Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>