force-app/main/default/objects/School_Object__c/fields/Activity_Threshold_Met_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Threshold_Met_Date__c</fullName>
    <description>The date the school first hit the action threshold criteria</description>
    <inlineHelpText>The date the school first hit the action threshold criteria</inlineHelpText>
    <label>Activity Threshold Met Date</label>
    <type>DateTime</type>
</CustomField>