force-app/main/default/objects/School_Object__c/fields/Add_Parents_Threshold_Met__c.field-meta.xml
<CustomField>
    <fullName>Add_Parents_Threshold_Met__c</fullName>
    <label>Add Parents Threshold Met</label>
    <type>DateTime</type>
</CustomField>