force-app/main/default/objects/School_Object__c/fields/Added_Payers_with_1_Online_Payment__c.field-meta.xml
<CustomField>
    <fullName>Added_Payers_with_1_Online_Payment__c</fullName>
    <label>Added Payers with 1+ Online Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>