force-app/main/default/objects/School_Object__c/fields/Added_Students_Per_Stated_Student__c.field-meta.xml
<CustomField>
    <fullName>Added_Students_Per_Stated_Student__c</fullName>
    <label>added_students_per_stated_student</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>