force-app/main/default/objects/School_Object__c/fields/Admin__c.field-meta.xml
<CustomField>
    <fullName>Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin (T/F)</label>
    <type>Checkbox</type>
</CustomField>