force-app/main/default/objects/School_Object__c/fields/Admin_Tag__c.field-meta.xml
<CustomField>
    <fullName>Admin_Tag__c</fullName>
    <inlineHelpText>Tag to help with reporting on identified records</inlineHelpText>
    <label>Admin Tag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>