force-app/main/default/objects/School_Object__c/fields/Applied_Bill_Plans_Sent_to_Payers__c.field-meta.xml
<CustomField>
    <fullName>Applied_Bill_Plans_Sent_to_Payers__c</fullName>
    <label>Applied Bill Plans Sent to Payers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>