force-app/main/default/objects/School_Object__c/fields/assessments_monthly_sub_amt_per_school__c.field-meta.xml
<CustomField>
    <fullName>assessments_monthly_sub_amt_per_school__c</fullName>
    <label>Assessments Monthly Sub Amt Per School</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>