force-app/main/default/objects/School_Object__c/fields/assessments_subscription_rec_interval__c.field-meta.xml
<CustomField>
    <fullName>assessments_subscription_rec_interval__c</fullName>
    <label>Assessments Subscription Rec Interval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>