force-app/main/default/objects/School_Object__c/fields/assessments_subscription_start_date__c.field-meta.xml
<CustomField>
    <fullName>assessments_subscription_start_date__c</fullName>
    <label>Assessments Subscriptions Start Date</label>
    <type>DateTime</type>
</CustomField>