force-app/main/default/objects/School_Object__c/fields/assessments_subscription_status__c.field-meta.xml
<CustomField>
    <fullName>assessments_subscription_status__c</fullName>
    <label>Assessments Subscription Status</label>
    <type>DateTime</type>
</CustomField>