force-app/main/default/objects/School_Object__c/fields/Average_Activities_Message_per_Student__c.field-meta.xml
<CustomField>
    <fullName>Average_Activities_Message_per_Student__c</fullName>
    <label>Average Activities &amp; Message per Student</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>