force-app/main/default/objects/School_Object__c/fields/Average_Check_in_out_Actions_per_Student__c.field-meta.xml
<CustomField>
    <fullName>Average_Check_in_out_Actions_per_Student__c</fullName>
    <label>Average Check-in/out Actions per Student</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>