force-app/main/default/objects/School_Object__c/fields/Avg_Application_Fee_t6m__c.field-meta.xml
<CustomField>
    <fullName>Avg_Application_Fee_t6m__c</fullName>
    <description>Avg value of billing during the last 6 months</description>
    <label>Avg Billing App Fees Last 6 Mnth</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>