force-app/main/default/objects/School_Object__c/fields/Avg_Online_Dollars_Processed_t6m__c.field-meta.xml
<CustomField>
    <fullName>Avg_Online_Dollars_Processed_t6m__c</fullName>
    <description>Avg dollars processed per month over the last 6 months</description>
    <label>Avg Online Dollars Processed Last 6 Mnth</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>