force-app/main/default/objects/School_Object__c/fields/Bill_Plans_or_Charges_Applied__c.field-meta.xml
<CustomField>
    <fullName>Bill_Plans_or_Charges_Applied__c</fullName>
    <label>Bill Plans or Charges Applied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>