force-app/main/default/objects/School_Object__c/fields/Bill_Rate_Uploaded_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Rate_Uploaded_Date__c</fullName>
    <description>Date that the Bill Rate was uploaded/created by onboarding team using the internal tool that went live in December 2024. This data will come directly from product in nightly job. Matt Ong point person on eng for tracking of this and will work with DataEnd on it getting populated</description>
    <inlineHelpText>Date that the customers bill rate was uploaded/created by bw onboarding team using the internal tool that went live in December 2024. Populated from product data on school object</inlineHelpText>
    <label>Bill Rate Uploaded Date</label>
    <type>Date</type>
</CustomField>