force-app/main/default/objects/School_Object__c/fields/Billing_ACH_Rate__c.field-meta.xml
<CustomField>
    <fullName>Billing_ACH_Rate__c</fullName>
    <description>Flat fee collected by brightwheel for each online transaction.</description>
    <inlineHelpText>Flat fee collected by brightwheel for each online transaction.</inlineHelpText>
    <label>billing_ach_rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>