force-app/main/default/objects/School_Object__c/fields/Billing_Activated_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Activated_Date__c</fullName>
    <description>Billing funnel - Indicate the date when school become billing activated</description>
    <label>Billing Activated Date</label>
    <type>DateTime</type>
</CustomField>