force-app/main/default/objects/School_Object__c/fields/Billing_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Activation_Date__c</fullName>
    <label>OLD Billing Activation Date</label>
    <type>DateTime</type>
</CustomField>