force-app/main/default/objects/School_Object__c/fields/Billing_Activation_Date_Unconverted__c.field-meta.xml
<CustomField>
    <fullName>Billing_Activation_Date_Unconverted__c</fullName>
    <formula>Billing_Activation_Date_2024__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Activation Date (Unconverted)</label>
    <type>Date</type>
</CustomField>