force-app/main/default/objects/School_Object__c/fields/Billing_Activation_Funnel_Stage_2024__c.field-meta.xml
<CustomField>
    <fullName>Billing_Activation_Funnel_Stage_2024__c</fullName>
    <label>Billing Activation Funnel Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NEW_Billing_Activation_Funnel_Stage</valueSetName>
    </valueSet>
</CustomField>