force-app/main/default/objects/School_Object__c/fields/Billing_Activation_Funnel_Stage__c.field-meta.xml
<CustomField>
    <fullName>Billing_Activation_Funnel_Stage__c</fullName>
    <label>OLD Billing Activation Funnel Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Onboarding_funnel_stages</valueSetName>
    </valueSet>
</CustomField>