force-app/main/default/objects/School_Object__c/fields/Billing_Activation_Funnel_Value_2024__c.field-meta.xml
<CustomField>
    <fullName>Billing_Activation_Funnel_Value_2024__c</fullName>
    <label>Billing Activation Funnel Value</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>