force-app/main/default/objects/School_Object__c/fields/Billing_Activation_M0_Active_Students__c.field-meta.xml
<CustomField>
    <fullName>Billing_Activation_M0_Active_Students__c</fullName>
    <description>Billing Activation - M0 Number of active students. Pulled from the data warehouse field: billing_activation_m0_count_active_students__c</description>
    <inlineHelpText>Billing Activation - M0 Number of active students. Pulled from the data warehouse field: billing_activation_m0_count_active_students__c</inlineHelpText>
    <label>Billing Activation M0 Active Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>