force-app/main/default/objects/School_Object__c/fields/Billing_Activation_M0_Payer_Attach_Rate__c.field-meta.xml
<CustomField>
    <fullName>Billing_Activation_M0_Payer_Attach_Rate__c</fullName>
    <description>Billing Activation - M0 payer attach rate (percentage of active students with online payments). Pulled from the data warehouse field: billing_activation_m0_payer_attach_rate__c</description>
    <inlineHelpText>Billing Activation - M0 payer attach rate (percentage of active students with online payments). Pulled from the data warehouse field: billing_activation_m0_payer_attach_rate__c</inlineHelpText>
    <label>Billing Activation M0 Payer Attach Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>