force-app/main/default/objects/School_Object__c/fields/Billing_Activation_M0_Paying_Students__c.field-meta.xml
<CustomField>
    <fullName>Billing_Activation_M0_Paying_Students__c</fullName>
    <description>Pulled from the data warehouse - DW API - billing_activation_m0_count_students_with_online_payment__c</description>
    <inlineHelpText>Billing Activation - m0 count students with online payment ( Pulled from the data warehouse )</inlineHelpText>
    <label>Billing Activation M0 Paying Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>