force-app/main/default/objects/School_Object__c/fields/Billing_Activation_M1_Payer_Attach_Rate__c.field-meta.xml
<CustomField>
    <fullName>Billing_Activation_M1_Payer_Attach_Rate__c</fullName>
    <description>Billing Activation - M1 payer attach rate . Pulled from the data warehouse field: billing_activation_m1_payer_attach_rate__c</description>
    <inlineHelpText>Billing Activation - M1 payer attach rate Pulled from the data warehouse field: billing_activation_m1_payer_attach_rate__c</inlineHelpText>
    <label>Billing Activation M1 Payer Attach Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>