force-app/main/default/objects/School_Object__c/fields/Billing_Activation_M1_Paying_Students__c.field-meta.xml
<CustomField>
    <fullName>Billing_Activation_M1_Paying_Students__c</fullName>
    <description>Billing Activation - M1 number of students with online payments. Pulled from the data warehouse field: billing_activation_m1_count_students_with_online_payment__c</description>
    <inlineHelpText>Billing Activation - M1 number of students with online payments. Pulled from the data warehouse field: billing_activation_m1_count_students_with_online_payment__c</inlineHelpText>
    <label>Billing Activation M1 Paying Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>