force-app/main/default/objects/School_Object__c/fields/Billing_Backdated_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Backdated_Activation_Date__c</fullName>
    <description>Captures the date when a backdated Billing Activation was applied.</description>
    <inlineHelpText>Captures the date when a backdated Billing Activation was applied.</inlineHelpText>
    <label>Billing Backdated Activation Date</label>
    <type>Date</type>
</CustomField>