force-app/main/default/objects/School_Object__c/fields/Billing_CC_Rate__c.field-meta.xml
<CustomField>
    <fullName>Billing_CC_Rate__c</fullName>
    <label>billing_cc_rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>