force-app/main/default/objects/School_Object__c/fields/Billing_Invoices_Sent_Count__c.field-meta.xml
<CustomField>
    <fullName>Billing_Invoices_Sent_Count__c</fullName>
    <label>Billing Invoices Sent Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>