force-app/main/default/objects/School_Object__c/fields/Billing_MAX_Of_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Billing_MAX_Of_Threshold__c</fullName>
    <description>Created for reporting purposes.If the Billing Activation Date is not blank, the formula will compare that date with the latest threshold date. If the Billing Activation Date is equal to the latest threshold met date, the formula returns TRUE. Otherwise, it returns FALSE. If the Date of Activation is blank, it returns NO BILLING ACTIVATION DATE.</description>
    <formula>IF(
    ISBLANK(Billing_Activation_Date_2024__c),
    &quot;No Billing Activation Date&quot;,
    IF(
        DATEVALUE(Billing_Activation_Date_2024__c) = 
        CASE(
            MAX(
                (BLANKVALUE(DATEVALUE(Billing_Adding_Students_Stage_Met_Date__c), TODAY() - 365) - TODAY()),
                (BLANKVALUE(DATEVALUE(Billing_Setting_Up_Bills_Stage_Met_Date__c), TODAY() - 365) - TODAY()),
                (BLANKVALUE(DATEVALUE(Billing_Submit_Verify_Stage_Met_Date__c), TODAY() - 365) - TODAY()),
                (BLANKVALUE(DATEVALUE(Billing_Complete_Set_Up_Stage_Met_Date__c), TODAY() - 365) - TODAY()),
                (BLANKVALUE(DATEVALUE(Billing_FinalVerification_Stage_Met_Date__c), TODAY() - 365) - TODAY()),
                (BLANKVALUE(DATEVALUE(Billing_Adding_Payers_Stage_Met_Date__c), TODAY() - 365) - TODAY()),
                (BLANKVALUE(DATEVALUE(Billing_Sending_Bills_Stage_Met_Date__c), TODAY() - 365) - TODAY()),
                (BLANKVALUE(DATEVALUE(Billing_Online_Payments_Stage_Met_Date__c), TODAY() - 365) - TODAY())
            ),
            (BLANKVALUE(DATEVALUE(Billing_Adding_Students_Stage_Met_Date__c), TODAY() - 365) - TODAY()), DATEVALUE(Billing_Adding_Students_Stage_Met_Date__c),
            (BLANKVALUE(DATEVALUE(Billing_Setting_Up_Bills_Stage_Met_Date__c), TODAY() - 365) - TODAY()), DATEVALUE(Billing_Setting_Up_Bills_Stage_Met_Date__c),
            (BLANKVALUE(DATEVALUE(Billing_Submit_Verify_Stage_Met_Date__c), TODAY() - 365) - TODAY()), DATEVALUE(Billing_Submit_Verify_Stage_Met_Date__c),
            (BLANKVALUE(DATEVALUE(Billing_Complete_Set_Up_Stage_Met_Date__c), TODAY() - 365) - TODAY()), DATEVALUE(Billing_Complete_Set_Up_Stage_Met_Date__c),
            (BLANKVALUE(DATEVALUE(Billing_FinalVerification_Stage_Met_Date__c), TODAY() - 365) - TODAY()), DATEVALUE(Billing_FinalVerification_Stage_Met_Date__c),
            (BLANKVALUE(DATEVALUE(Billing_Adding_Payers_Stage_Met_Date__c), TODAY() - 365) - TODAY()), DATEVALUE(Billing_Adding_Payers_Stage_Met_Date__c),
            (BLANKVALUE(DATEVALUE(Billing_Sending_Bills_Stage_Met_Date__c), TODAY() - 365) - TODAY()), DATEVALUE(Billing_Sending_Bills_Stage_Met_Date__c),
            (BLANKVALUE(DATEVALUE(Billing_Online_Payments_Stage_Met_Date__c), TODAY() - 365) - TODAY()), DATEVALUE(Billing_Online_Payments_Stage_Met_Date__c),
            null
        ),
        &quot;true&quot;,
        &quot;false&quot;
    )
)</formula>
    <label>Billing MAX Of Threshold</label>
    <type>Text</type>
</CustomField>