force-app/main/default/objects/School_Object__c/fields/Billing_Onboarding_Eligible_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Onboarding_Eligible_Date__c</fullName>
    <description>Date the school became Billing Onboarding eligible. Populated through the nightly data warehouse sync</description>
    <label>Billing Onboarding Eligible Date</label>
    <type>Date</type>
</CustomField>