force-app/main/default/objects/School_Object__c/fields/Billing_Setting_Up_Bills_Stage_Met_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Setting_Up_Bills_Stage_Met_Date__c</fullName>
    <label>Billing Setting Up Bills Stage Met Date</label>
    <type>DateTime</type>
</CustomField>