force-app/main/default/objects/School_Object__c/fields/Billing_Setup_Threshold_Met_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Setup_Threshold_Met_Date__c</fullName>
    <description>Billing funnel - Indicates the date when school met billing setup threshold</description>
    <label>Billing Setup Threshold Met Date</label>
    <type>DateTime</type>
</CustomField>