force-app/main/default/objects/School_Object__c/fields/Billing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Start_Date__c</fullName>
    <description>Indicates the most recent billing closed won date.</description>
    <inlineHelpText>Indicates the most recent billing closed won date.</inlineHelpText>
    <label>Billing Launch Date</label>
    <type>Date</type>
</CustomField>