force-app/main/default/objects/School_Object__c/fields/Billing_Submit_Verify_Stage_Met_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Submit_Verify_Stage_Met_Date__c</fullName>
    <label>Billing Submit Verify Stage Met Date</label>
    <type>DateTime</type>
</CustomField>