force-app/main/default/objects/School_Object__c/fields/Billing_Verification_Approved__c.field-meta.xml
<CustomField>
    <fullName>Billing_Verification_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Verification Approved</label>
    <type>Checkbox</type>
</CustomField>