force-app/main/default/objects/School_Object__c/fields/Billing_Verification_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Billing_Verification_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Verification Submitted</label>
    <type>Checkbox</type>
</CustomField>