force-app/main/default/objects/School_Object__c/fields/Billing_Version__c.field-meta.xml
<CustomField>
    <fullName>Billing_Version__c</fullName>
    <description>Indicates if the school is on billing V1 or V2 or V3</description>
    <inlineHelpText>Indicates if the school is on billing V1 or V2 or V3</inlineHelpText>
    <label>Billing Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>