force-app/main/default/objects/School_Object__c/fields/Brightwheel_Org_UUID__c.field-meta.xml
<CustomField>
    <fullName>Brightwheel_Org_UUID__c</fullName>
    <description>Brightwheel Org UUID from production</description>
    <externalId>true</externalId>
    <label>Brightwheel Organization UUID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>