force-app/main/default/objects/School_Object__c/fields/Brightwheel_Owner_UUID__c.field-meta.xml
<CustomField>
    <fullName>Brightwheel_Owner_UUID__c</fullName>
    <externalId>true</externalId>
    <label>Brightwheel Owner UUID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>