force-app/main/default/objects/School_Object__c/fields/Brightwheel_Plan__c.field-meta.xml
<CustomField>
    <fullName>Brightwheel_Plan__c</fullName>
    <label>Brightwheel Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brightwheel_Plan</valueSetName>
    </valueSet>
</CustomField>