force-app/main/default/objects/School_Object__c/fields/Brightwheel_School_UUID__c.field-meta.xml
<CustomField>
    <fullName>Brightwheel_School_UUID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Brightwheel School UUID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>