force-app/main/default/objects/School_Object__c/fields/Bulk_Upload_Date_PST__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Upload_Date_PST__c</fullName>
    <description>Reflects the date the school&apos;s roster is uploaded</description>
    <inlineHelpText>Reflects the date the school&apos;s roster is uploaded</inlineHelpText>
    <label>bulk_upload_date (PST)</label>
    <type>Date</type>
</CustomField>